resolved an error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Forms</h1>
-    <form action="../index1.html">
+    <form action="index1.html">
 
         <div>
             <label for="name">Name :</label>
